data/derived/comb/progs/unify/prog0668.ml.out
Characters 30-52:
  "[" ^ (List.map sepConcat l) ^ "]";;
        ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (string list -> string) list
       but an expression was expected of type string
